--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><title> suji </title>
+<head><title> ʜᴇʟʟᴏ ᴡᴏʀʟᴅ </title>
     <style>
         body {
             background-color: black;
