--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
             }
         }
 
-        /* 烟花效果的 CSS，简单为了示例 */
         #fireworks {
             position: fixed;
             top: 0;
@@ -34,18 +33,28 @@
             height: 100%;
             z-index: 1;
             pointer-events: none;
+            display: flex;
+            justify-content: center;
+            align-items: flex-end;
         }
 
         .firework {
-            position: absolute;
-            bottom: 0;
-            background-color: red;
-            animation: shootUp 0.75s ease-in-out forwards;
+            width: 5px;
+            height: 150px;
+            background-color: yellow;
+            animation: shootUp 2s ease-out forwards, explode 0.3s ease-out 2s forwards;
+            opacity: 0; /* Start invisible */
         }
 
         @keyframes shootUp {
-            from { transform: translateY(0); }
-            to { transform: translateY(-100vh); opacity: 0; }
+            0% { transform: translateY(0); opacity: 1; }
+            70% { opacity: 1; }
+            100% { transform: translateY(-300px); opacity: 0; }
+        }
+
+        @keyframes explode {
+            from { width: 5px; height: 5px; opacity: 1; }
+            to { width: 100px; height: 100px; border-radius: 50%; opacity: 0; background-color: #ff0; }
         }
     </style>
 </head>
@@ -59,26 +68,18 @@
     <script>
         function initFireworks() {
             const fireworksContainer = document.getElementById('fireworks');
-            const numOfFireworks = 10;
+            let firework = document.createElement('div');
+            firework.classList.add('firework');
+            fireworksContainer.appendChild(firework);
 
-            for (let i = 0; i < numOfFireworks; i++) {
-                let firework = document.createElement('div');
-                firework.classList.add('firework');
-                firework.style.left = `${Math.random() * 100}%`;
-                firework.style.backgroundColor = `hsl(${Math.random() * 360}, 100%, 50%)`;
-                firework.style.animationDuration = `${0.5 + Math.random() * 1.5}s`;
-                firework.style.animationDelay = `${Math.random() * 1}s`;
-
-                firework.addEventListener('animationend', () => {
-                    firework.remove();
-
-                    if (document.querySelectorAll('.firework').length === 0) {
-                        document.getElementById('content').style.display = 'block';
-                    }
-                });
-
-                fireworksContainer.appendChild(firework);
-            }
+            firework.addEventListener('animationend', (e) => {
+                // 只在“explode”动画结束时显示文本
+                if (e.animationName === 'explode') {
+                    document.getElementById('content').style.display = 'block';
+                    // 移除烟花元素
+                    fireworksContainer.removeChild(firework);
+                }
+            });
         }
     </script>
 </body>
